test/locust/l7-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: l7-ingress-locust
spec:
  backend:
    serviceName: locust-master
    servicePort: loc-master-web
