test/locust/locust-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locust-master
  labels:
    name: locust
    role: master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: locust
        role: master
    spec:
      containers:
        - name: locust
          image: gcr.io/cloud-solutions-images/locust-tasks:latest
          imagePullPolicy: Always
          env:
            - name: LOCUST_MODE
              value: master
            - name: TARGET_HOST
              value: http://workload-simulation-webapp.appspot.com
          ports:
            - name: loc-master-web
              containerPort: 8089
            - name: loc-master-p1
              containerPort: 5557
            - name: loc-master-p2
              containerPort: 5558

---

apiVersion: v1
kind: Service
metadata:
  name: locust-master
  labels:
    name: locust
    role: master
spec:
  ports:
    - name: loc-master-web
      port: 8089
    - name: loc-master-p1
      port: 5557
    - name: loc-master-p2
      port: 5558
  selector:
    name: locust
    role: master
  type: NodePort
