test/locust/locust-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locust-worker
  labels:
    name: locust
    role: worker
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: locust
        role: worker
    spec:
      containers:
        - name: locust
          image: gcr.io/cloud-solutions-images/locust-tasks:latest
          imagePullPolicy: Always
          env:
            - name: LOCUST_MODE
              value: worker
            - name: LOCUST_MASTER
              value: locust-master
            - name: TARGET_HOST
              value: https://staging.muzhack.com
